--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "donni",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://2neyadets.github.io/gitHub_repo_search",
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
